Added Caching of on_action -> action response.
